# matcha-core

./: .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml  requirements.txt
docs/: SPECS_TEMPLATE.md
matcha_core/: __init__.py  cli.py  engine.py  evaluator.py  models.py  reporting.py  specs_parser.py
tests/: __init__.py  test_cli.py  test_engine.py  test_evaluator.py  test_reporting.py
