[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matcha-core"
dynamic = ["version"]
description = "Analyze repositories against SPECS.md and generate implementation reports."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Patominer" }
]
keywords = ["specs", "analysis", "llm", "qa", "repository"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "gitpython>=3.1.41",
    "openai>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "twine>=5.1.1",
]

[project.scripts]
matcha-core = "matcha_core.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["matcha_core*"]

[tool.setuptools.dynamic]
version = { attr = "matcha_core.__version__" }
